envoy/upgrade/envoy-ws.yaml
static_resources:
  listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 10000
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_ws_to_ws
          route_config:
            name: local_route
            virtual_hosts:
            - name: app
              domains:
              - "*"
              routes:
              - match:
                  path: "/upgrade"
                route:
                  upgrade_configs:
                  - upgrade_type: websocket
                  cluster: service_ws
                  max_stream_duration: 3600s
                  regex_rewrite:
                    pattern:
                      google_re2: {}
                      regex: "^/upgrade$"
                    substitution: "/"
          http_filters:
          - name: envoy.filters.http.router

  clusters:
  - name: service_ws
    connect_timeout: 0.25s
    type: strict_dns
    lb_policy: round_robin
    load_assignment:
      cluster_name: service_ws
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: service-ws
                port_value: 8080
